fixed colors and alignment on almost all pages

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -3,3 +3,8 @@
     padding-top: 8%;
     background: linear-gradient(0deg, rgb(31, 71, 109) 0%, rgba(85,133,179,1) 94%, rgba(255,255,255,1) 100%);
 }
+
+.about-content {
+    color: white;
+    letter-spacing: 1.2px;
+}
