--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -15,10 +15,12 @@
     background: linear-gradient(0deg, rgb(23, 53, 82) 0%, rgba(85,133,179,1) 94%, rgba(255,255,255,1) 100%);
 }
 
-/*
-    make background 
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 52%, rgba(255,255,255,1) 100%);
+.experience-content {
+    color: white;
+    letter-spacing: 1.2px;
+}
 
-    make text in white boxes
-*/
+.experience-content a {
+    color: rgb(154, 208, 255);
+    letter-spacing: 1.2px;
+}
